# dace

./: CMakeLists.txt  cmake-variants.json
interfaces/python/: CMakeLists.txt  PyDACE.cpp
