#FIND_PACKAGE(Boost COMPONENTS python3)
FIND_PACKAGE(PythonLibs 3)

IF(WIN32)
  FIND_PACKAGE(Boost COMPONENTS PYTHON37)
  ADD_LIBRARY(PyDACE SHARED $<TARGET_OBJECTS:c_core> $<TARGET_OBJECTS:dacecxx> $<TARGET_OBJECTS:dacepy>)
  TARGET_LINK_LIBRARIES(PyDACE ${PYTHON_LIBRARIES} ${Boost_PYTHON37_LIBRARY_RELEASE})
  set_target_properties(PyDACE PROPERTIES PREFIX "" SUFFIX ".pyd")
ELSE(WIN32)
  FIND_PACKAGE(Boost COMPONENTS python3)
  ADD_LIBRARY(PyDACE SHARED $<TARGET_OBJECTS:c_core> $<TARGET_OBJECTS:dacecxx> $<TARGET_OBJECTS:dacepy>)
  TARGET_LINK_LIBRARIES(PyDACE ${PYTHON_LIBRARIES} ${Boost_PYTHON3_LIBRARY})
  set_target_properties(PyDACE PROPERTIES PREFIX "" SUFFIX ".so")
ENDIF(WIN32)

IF(Boost_FOUND)
  INCLUDE_DIRECTORIES("${Boost_INCLUDE_DIR}" "${PYTHON_INCLUDE_DIRS}")
  SET(Boost_USE_STATIC_LIBS OFF)
  SET(Boost_USE_MULTITHREADED ON)
  SET(Boost_USE_STATIC_RUNTIME OFF)

  add_library(dacepy OBJECT PyDACE.cpp)

install(TARGETS PyDACE LIBRARY DESTINATION lib COMPONENT libraries
            RUNTIME DESTINATION lib COMPONENT libraries 
            ARCHIVE DESTINATION lib COMPONENT libraries
            PUBLIC_HEADER DESTINATION include COMPONENT headers)
ELSEIF(NOT Boost_FOUND)
  MESSAGE(FATAL_ERROR "Unable to find correct Boost version. Did you set BOOST_ROOT?")
ENDIF()